<resources>
    <string name="app_name">chatground2</string>
    <string name="title_activity_findingchat">findingchat</string>
    <string name="title_activity_register">register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_ground_exit_text">게임에서 나가시겠습니까?</string>

    <string name="denied_permission">권한이 거부되었습니다.</string>
    <string name="request_permission">권한 허가해주세요.</string>
    <string name="activity_result_cancel">취소 되었습니다.</string>
    <string name="text_null">내용을 입력해주세요!</string>
    <string name="file_path_null">파일을 찾을 수 없습니다!</string>
    <string name="forum_path_null">게시을 찾을 수 없습니다!</string>
    <string name="retrofit_success">작업 성공</string>
    <string name="retrofit_failure">작업 실패</string>
    <string name="retrofit_error">통신 실패</string>

    <string name="forum_title_null">제목을 입력해주세요</string>
    <string name="forum_content_null">내용을 입력해주세요</string>

    <string name="forum_modify_message">해당 게시글을 수정 하시겠습니까?</string>
    <string name="forum_last_page_message">마지막 글입니다</string>
    <string name="forum_delete_message">해당 글을 삭제 하시겠습니까?</string>
    <string name="comment_delete_message">해당 댓글을 삭제 하시겠습니까?</string>
    <string name="recommend_cancel_message">추천을 취소하시겠습니까?</string>
    <string name="recommend_message">해당 게시글을 추천 하시겠습니까?</string>
    <string name="image_delete_message">이미지를 지우시겠습니까?</string>
    <string name="image_over_message">사진은 5개까지 가능합니다</string>

    <string name="capital_stop">STOP</string>
    <string name="capital_ready">READY</string>

    <string name="login_failure_message">아이디 또는 패스워드가 일치하지 않습니다.</string>
    <string name="login_success_message">로그인 성공</string>
    <string name="email_null">이메일을 입력해주세요</string>
    <string name="password_null">비밀번호를 입력해주세요</string>
    <string name="email_form">이메일을 형식에 맞게 입력해주세요</string>
    <string name="password_form">비밀번호 형식에 맞게 입력해주세요</string>
    <string name="nickname_form">닉네임 형식에 맞게 입력해주세요</string>
    <string name="nickname_null">닉네임을 입력해주세요</string>
    <string name="password_confirm_null">비밀번호 확인을 입력해주세요</string>
    <string name="request_email_overlap">이메일 중복검사를 해주세요</string>
    <string name="request_nickname_overlap">닉네임 중복검사를 해주세요</string>
    <string name="password_confirm_fail">비밀번호가 일치하지 않습니다</string>

    <string name="nickname_overlap_pass">사용할 수 있는 닉네임입니다</string>
    <string name="nickname_overlap_fail">이미 존재하는 닉네임입니다</string>
    <string name="email_overlap_pass">사용할 수 있는 이메일입니다</string>
    <string name="email_overlap_fail">이미 존재하는 이메일입니다</string>
    <string name="sign_up_success">가입 성공</string>
    <string name="sign_up_failure">가입 실패</string>

    <string name="call_user_failure">불러오기 실패</string>
    <string name="save_failure">저장 완료</string>
    <string name="save_success">저장 실패</string>

    <string name="chat_ground_title">채팅 방</string>
    <string name="chat_ground_time">00:00</string>
    <string name="chat_ground_agree">찬성</string>
    <string name="chat_ground_oppose">반대</string>
    <string name="chat_ground_win">WIN</string>
    <string name="chat_ground_lose">LOSE</string>
    <string name="chat_ground_draw">DRAW</string>

    <string name="login_title_text">ChatGround 로그인</string>
    <string name="login_request_email">이메일 주소를 입력해주십시오.</string>
    <string name="login_request_password">비밀번호를 입력해주십시오.</string>
    <string name="login_auto_text">자동 로그인</string>
    <string name="login_text">로그인</string>
    <string name="login_sign_up_text">회원가입</string>

    <string name="modify_forum_top">글수정</string>
    <string name="email_text">이메일</string>
    <string name="email_hint">이메일 주소</string>
    <string name="overlap_check_text">중복확인</string>
    <string name="password_text">비밀번호</string>
    <string name="password_hint">영문+숫자 8~20 이내</string>
    <string name="password_confirm_text">비밀번호 확인</string>
    <string name="nickname_text">닉네임</string>
    <string name="nickname_hint">한글,영문,숫자 4~12 이내</string>
    <string name="sign_up_complete">가입완료</string>
    <string name="write_text">글쓰기</string>

    <string name="comment_modify">댓글 수정</string>
    <string name="comment_modify_content">수정할 내용을 입력하십시오.</string>
    <string name="modify_text">수정</string>
    <string name="delete_text">삭제</string>
    <string name="reply_text">답장</string>
    <string name="cancel_text">취소</string>
    <string name="forum_text">게시판</string>

    <string name="profile_text">프로필</string>
    <string name="save_text">저장</string>
    <string name="introduce_text">나의 한마디</string>
    <string name="introduce_hint">자기소개 한마디</string>
    <string name="setting_text">설정</string>
    <string name="logout_text">로그아웃</string>
    <string name="exit_text">로그아웃</string>

    <string name="logout_message">정말 로그아웃 하시겠습니까?</string>

    <string name="plus_dialog_title">파일 전송</string>
    <string name="image_dialog_title">이미지 첨부</string>
    <string name="default_dialog_title">알림</string>
    <string name="dialog_item_image">이미지</string>
    <string name="dialog_item_default_image">이미지</string>

    <string name="default_dialog_cancel">취소</string>
    <string name="default_dialog_delete">삭제</string>
    <string name="default_dialog_confirm">확인</string>

    <string name="view_type_error">알 수 없는 뷰 타입 에러</string>
    <string name="image_load_error">이미지 로드 에러</string>

    <string name="user_opinion_agree">찬</string>
    <string name="user_opinion_oppose">반</string>
    <string name="user_opinion_neutrality">중</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gameExplanation">이 게임은 정치와 같은 평소에 우리가 꺼려하던 주제들에 대해 진솔하게 토론할 공간을 제공해주는 동시에 반대쪽 의견을 자신의 논리로 설득시켜 몇 명이 설득 당했느냐에 따라 승패를 나눠주는 게임입니다.</string>

    <string name="holder_subject">[%s]</string>
    <string name="holder_num">[%d]개</string>
    <string name="comment_num">댓글 : %d개</string>
    <string name="recommend_num">추천 : %d개</string>
    <string name="chat_ground_dynamic_time_second1">00:0%d</string>
    <string name="chat_ground_dynamic_time_second2">00:%d</string>
    <string name="chat_ground_dynamic_time_minute1">0%d1:0%d2</string>
    <string name="chat_ground_dynamic_time_minute2">0%d1:%d2</string>
    <string name="chat_ground_dynamic_time_minute3">%d1:0%d2</string>
    <string name="chat_ground_dynamic_time_minute4">%d1:%d2</string>
    <string name="set_file_path">file://%s</string>

    <string-array name="file_dialog_items">
        <item>이미지</item>
        <item>동영상</item>
    </string-array>

    <string-array name="profile_dialog_items">
        <item>이미지</item>
        <item>기본이미지</item>
    </string-array>


    <string-array name="interest">
        <item>기타</item>
        <item>정치</item>
        <item>경제</item>
        <item>종교</item>
        <item>연예</item>
        <item>동물</item>
        <item>게임</item>
        <item>음식</item>
        <item>패션</item>
        <item>영화</item>
        <item>스포츠</item>
        <item>철학</item>
        <item>연애</item>
        <item>음악</item>
    </string-array>

    <string-array name="data_search">

        <item>제목</item>

        <item>내용</item>

        <item>제목+내용</item>

    </string-array>
</resources>
