<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signUp.SignUpActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_arrow_back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/SU_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/SU_emailOverlap"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <Button
        android:id="@+id/SU_emailOverlap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button1"
        android:text="@string/overlap_check_text"
        android:textColor="@color/button1color"
        app:layout_constraintBottom_toBottomOf="@+id/SU_email"
        app:layout_constraintEnd_toStartOf="@+id/SU_emailCheck"
        app:layout_constraintTop_toTopOf="@+id/SU_email" />

    <ImageView
        android:layout_marginEnd="10dp"
        android:id="@+id/SU_emailCheck"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:alpha="0.4"
        android:background="@drawable/ic_check_blue_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/SU_emailOverlap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SU_emailOverlap" />

    <TextView
        android:id="@+id/SU_passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_email" />

    <EditText
        android:maxLength="20"
        android:id="@+id/SU_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/SU_passwordCheck"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_passwordText" />

    <ImageView
        android:id="@+id/SU_passwordCheck"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:alpha="0.4"
        android:background="@drawable/ic_check_blue_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/SU_password"
        app:layout_constraintEnd_toEndOf="@+id/SU_emailCheck"
        app:layout_constraintTop_toTopOf="@+id/SU_password" />

    <TextView
        android:id="@+id/SU_passwordConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password_confirm_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_password" />

    <EditText
        android:maxLength="20"
        android:id="@+id/SU_passwordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm_text"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/SU_password"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_passwordConfirmText" />

    <ImageView
        android:id="@+id/SU_passwordConfirmCheck"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:alpha="0.4"
        android:background="@drawable/ic_check_blue_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/SU_passwordConfirm"
        app:layout_constraintEnd_toEndOf="@+id/SU_emailCheck"
        app:layout_constraintTop_toTopOf="@+id/SU_passwordConfirm" />

    <TextView
        android:id="@+id/SU_nicknameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nickname_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_passwordConfirm" />

    <EditText
        android:maxLength="9"
        android:id="@+id/SU_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/SU_email"
        app:layout_constraintStart_toStartOf="@+id/Email"
        app:layout_constraintTop_toBottomOf="@+id/SU_nicknameText" />

    <Button
        android:id="@+id/SU_nicknameOverlap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button1"
        android:text="@string/overlap_check_text"
        android:textColor="@color/button1color"
        app:layout_constraintBottom_toBottomOf="@+id/SU_nickname"
        app:layout_constraintStart_toEndOf="@id/SU_nickname"
        app:layout_constraintTop_toTopOf="@+id/SU_nickname" />

    <ImageView
        android:id="@+id/SU_nicknameCheck"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:alpha="0.4"
        android:background="@drawable/ic_check_blue_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/SU_nicknameOverlap"
        app:layout_constraintEnd_toEndOf="@+id/SU_emailCheck"
        app:layout_constraintTop_toTopOf="@+id/SU_nicknameOverlap" />

    <Button
        android:id="@+id/SU_signUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/sign_up_complete"
        android:layout_marginTop="40dp"
        android:textColor="@color/button2color"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/SU_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/SU_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>