<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/comment_modify"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/CM_content"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/comment_modify_content"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageButton
        android:id="@+id/CM_camera"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/write_forum_camera_icon"
        app:layout_constraintStart_toStartOf="@+id/CM_content"
        app:layout_constraintTop_toBottomOf="@+id/CM_content" />

    <Button
        android:id="@+id/CM_modify"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:text="@string/modify_text"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CM_content" />

    <Button
        android:id="@+id/CM_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="#ffffff"
        android:text="@string/cancel_text"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/CM_modify"
        app:layout_constraintTop_toTopOf="@id/CM_modify" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/CM_camera" />

    <ProgressBar
        android:id="@+id/CM_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>