<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CG_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    tools:context=".view.chatGround.ChatGroundActivity"
    tools:openDrawer="end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/CG_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/sky"
            app:layout_constraintBottom_toBottomOf="@+id/CG_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CG_title" />

        <TextView
            android:id="@+id/CG_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/chat_ground_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/CG_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CG_time"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/timetedury"
            android:gravity="center"
            android:text="@string/chat_ground_time"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/CG_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CG_title" />

        <ImageButton
            android:id="@+id/CG_drawerButton"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/ic_menu_black"
            app:layout_constraintBottom_toBottomOf="@+id/CG_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CG_title" />

        <TextView
            android:id="@+id/CG_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/subject_border"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CG_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CG_chatRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/CG_message"
            app:layout_constraintTop_toBottomOf="@+id/CG_subject" />

        <LinearLayout
            android:id="@+id/CG_opinion"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CG_subject">

            <Button
                android:id="@+id/CG_agree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button5"
                android:text="@string/chat_ground_agree"
                android:textSize="30sp" />

            <Button
                android:id="@+id/CG_oppose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/button6"
                android:text="@string/chat_ground_oppose"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:id="@+id/CG_white"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CG_chatRecycle" />

        <ImageButton
            android:id="@+id/CG_plus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/plusicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/CG_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="130dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CG_sendButton"
            app:layout_constraintStart_toEndOf="@+id/CG_plus" />

        <ImageButton
            android:id="@+id/CG_sendButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/send_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/CG_strategicSendButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/send_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/CG_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button4"
            android:gravity="center"
            android:text="@string/chat_ground_draw"
            android:textColor="@color/white"
            android:visibility="gone"
            app:autoSizeMaxTextSize="110sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/menu_chat_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>