<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.writeForum.WriteForumActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_arrow_back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="45dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/WF_saveButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/write_forum_save_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0.5dp"
        android:layout_height="28dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/WF_saveButton"
        app:layout_constraintEnd_toStartOf="@id/WF_saveButton"
        app:layout_constraintStart_toEndOf="@id/WF_cameraButton"
        app:layout_constraintTop_toTopOf="@id/WF_saveButton" />

    <ImageButton
        android:id="@+id/WF_cameraButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/write_forum_camera_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@id/WF_saveButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/WF_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/forum_title_null"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/WF_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/WF_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/forum_content_null"
        android:padding="10dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/WF_title" />


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B7B7B7"
        app:layout_constraintTop_toBottomOf="@+id/WF_title" />

    <Spinner
        android:id="@+id/WF_subject"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:entries="@array/interest"
        app:layout_constraintBottom_toBottomOf="@+id/WF_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/WF_title" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/WF_showImage1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/WF_showImage1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/noimage"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <ImageButton
        android:id="@+id/WF_showImage2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/noimage"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@id/WF_showImage1"
        app:layout_constraintWidth_percent="0.2" />

    <ImageButton
        android:id="@+id/WF_showImage3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/noimage"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@id/WF_showImage2"
        app:layout_constraintWidth_percent="0.2" />

    <ImageButton
        android:id="@+id/WF_showImage4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/noimage"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@id/WF_showImage3"
        app:layout_constraintWidth_percent="0.2" />

    <ImageButton
        android:id="@+id/WF_showImage5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/noimage"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@id/WF_showImage4"
        app:layout_constraintWidth_percent="0.2" />

    <ProgressBar
        android:id="@+id/WF_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>